--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -20,6 +20,13 @@ jobs:
         with:
           persist-credentials: false
       - env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.TMP_AWS_ACCESS_KEY_ID }}
+          AWS_DEFAULT_REGION: ${{ secrets.TMP_AWS_DEFAULT_REGION }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.TMP_AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN: ${{ secrets.TMP_AWS_SESSION_TOKEN }}
+        name: pushCache
+        run: m . /checkAWSCredentials
+      - env:
           GIF_TAG: ${{ secrets.GIF_TAG }}
           GIPHY_TOKEN: ${{ secrets.GIPHY_TOKEN }}
           SLACK_BOT_CHANNEL: ${{ secrets.SLACK_BOT_CHANNEL }}
