--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-hello.yaml
+github-actions
 # It's better to unpack these files and commit the raw source because
 # git has its own built in compression methods.
 *.7z
