--- a/.github/workflows/notify-slack.yaml
+++ b/.github/workflows/notify-slack.yaml
@@ -16,11 +16,7 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN_GIT_ACTION }}
         name: Build
         run: nix develop --command gh-actions-notify-slack-build
-      - env:
-          GIPHY_TOKEN: ${{ secrets.GIPHY_TOKEN }}
-          SLACK_BOT_CHANNEL: ${{ secrets.SLACK_BOT_CHANNEL }}
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN_GIT_ACTION }}
-        name: Post Deploy
+      - name: Post Deploy
         run: nix develop --command gh-actions-notify-slack-post-deploy
 "on":
   push:
